# astro-obsidian

./: Cargo.toml  LICENSE  README.md
src/: args.rs  graph.rs  main.rs
